<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/newsFragment"
        android:icon="@drawable/news"
        android:title="@string/label_news"
        app:showAsAction="withText" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/search"
        android:title="@string/label_search" />
    <item
        android:id="@+id/helpFragment"
        android:title="@string/label_help" />
    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/history_2"
        android:title="@string/label_history" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile"
        android:title="@string/label_profile" />
</menu>